--- a/index.html
+++ b/index.html
@@ -172,7 +172,16 @@
                   </div>
               </div>
           </div>
-      
+        <div id="finalDeTot">
+        <div class="container" >
+            <div class="col-sm-6">
+                <p>Copyright &copy;2016 All right reserved</p>
+            </div>
+            <div class="col-sm-6 hidden-xs">
+            fotos
+            </div>
+        </div>
+        </div>
       </footer>
       
 
