--- a/slider4.html
+++ b/slider4.html
@@ -1,32 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="prova.css">
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet">
-    <!--script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script-->
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="js/parallax.js"></script>
-</head>
-
-<body>
-    <div class="container blog">
+<div class="container blog">
         <div class="titol text-center">
             <h2>OUR LATEST BLOG</h2>
             <div class="linia-llarga"></div>
@@ -151,16 +123,14 @@
         </div>
         <!-- ############ TABLET ########## -->
         <div class="row visible-sm">
-            <div class="row">
                 <div class="col-xs-12">
                     <!-- Controls -->
                     <div class="controls pull-right">
                         <a class="left fa fa-chevron-left boto-slider" href="#carousel-comentari2" data-slide="prev"></a>
                         <a class="right fa fa-chevron-right boto-slider" href="#carousel-comentari2" data-slide="next"></a>
                     </div>
-                </div>
             </div>
-            <div id="carousel-comentari2" class="carousel slide" data-ride="carousel">
+            <div id="carousel-comentari2" class="carousel slide col-xs-12" data-ride="carousel">
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner">
                     <div class="item active">
@@ -236,16 +206,14 @@
         </div>
         <!-- ############ MOBIL ########## -->
         <div class="row visible-xs">
-            <div class="row">
-                <div class="col-xs-12">
-                    <!-- Controls -->
-                    <div class="controls pull-right">
-                        <a class="left fa fa-chevron-left boto-slider" href="#carousel-comentari3" data-slide="prev"></a>
-                        <a class="right fa fa-chevron-right boto-slider" href="#carousel-comentari3" data-slide="next"></a>
-                    </div>
-                </div>
+            <div class="col-xs-12">
+            <!-- Controls -->
+            <div class="controls pull-right">
+                <a class="left fa fa-chevron-left boto-slider" href="#carousel-comentari3" data-slide="prev"></a>
+                <a class="right fa fa-chevron-right boto-slider" href="#carousel-comentari3" data-slide="next"></a>
             </div>
-            <div id="carousel-comentari3" class="carousel slide" data-ride="carousel">
+        </div>
+            <div id="carousel-comentari3" class="carousel slide col-xs-12" data-ride="carousel">
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner">
                     <div class="item active">
@@ -282,8 +250,3 @@
             </div>
         </div>
     </div>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-</body>
-
-</html>
