--- a/slider2.html
+++ b/slider2.html
@@ -1,7 +1,6 @@
 <div class="container slider-productes">
     <!-- SLIDER DESKTOP -->
     <div class="row visible-md visible-lg">
-        <div class="row">
             <div class="col-xs-12">
                 <!-- Controls -->
                 <div class="controls pull-right">
@@ -9,8 +8,7 @@
                     <a class="right fa fa-chevron-right boto-slider" href="#carousel-example" data-slide="next"></a>
                 </div>
             </div>
-        </div>
-        <div id="carousel-example" class="carousel slide" data-ride="carousel">
+        <div id="carousel-example" class="carousel slide col-xs-12" data-ride="carousel">
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
                 <div class="item active">
@@ -185,17 +183,15 @@
         </div>
     </div>
     <!-- ############### SLIDER TABLET ###################### -->
-    <div class="visible-sm">
-        <div class="row">
+    <div class="row visible-sm">
             <div class="col-md-12">
                 <!-- Controls -->
                 <div class="controls pull-right">
                     <a class="left fa fa-chevron-left boto-slider" href="#carousel-example2" data-slide="prev"></a>
                     <a class="right fa fa-chevron-right boto-slider" href="#carousel-example2" data-slide="next"></a>
                 </div>
-            </div>
         </div>
-        <div id="carousel-example2" class="carousel slide" data-ride="carousel">
+        <div id="carousel-example2" class="carousel slide col-md-12" data-ride="carousel">
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
                 <div class="item active">
