--- a/slider4.html
+++ b/slider4.html
@@ -8,7 +8,6 @@
         </div>
         <!-- ############ DESKTOP ########## -->
         <div class="row visible-md visible-lg">
-            <div class="row">
                 <div class="col-xs-12">
                     <!-- Controls -->
                     <div class="controls pull-right">
@@ -16,8 +15,7 @@
                         <a class="right fa fa-chevron-right boto-slider" href="#carousel-comentari" data-slide="next"></a>
                     </div>
                 </div>
-            </div>
-            <div id="carousel-comentari" class="carousel slide" data-ride="carousel">
+            <div id="carousel-comentari" class="carousel slide col-xs-12" data-ride="carousel">
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner">
                     <div class="item active">
