--- a/header.html
+++ b/header.html
@@ -1,4 +1,24 @@
 <header>
+    <div class="container">
+        <div class="logotip">
+            <h1>FABRIC</h1>
+        </div>
+        <div class="links text-center">
+            <a href="#" class="actiu">HOME</a>
+            <a href="#">MEGAMENU<span class="caret"></span></a>
+            <a href="#">SHOP</a>
+            <a href="#">BLOG</a>
+            <a href="#">PORTFOLIO</a>
+            <a href="#">PAGES<span class="caret"></span></a>
+        </div>
+        <div class="icones">
+            <a href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
+            <a href="#"><i class="fa fa-user" aria-hidden="true"></i></a>
+            <a href="#"><i class="fa fa-shopping-basket" aria-hidden="true"></i></a>
+        </div>
+    </div>
+</header>
+<header>
         <nav class="navbar navbar-default navbar-static-top">
             <div class="container">
                 <div class="navbar-header pull-left"> <a class="navbar-brand" href="#">Brand</a> </div>
