--- a/footer.html
+++ b/footer.html
@@ -48,7 +48,12 @@
             <div class="col-sm-6">
                 <p>Copyright &copy;2016 All right reserved</p>
             </div>
-            <div class="col-sm-6 hidden-xs"> fotos </div>
+            <div class="col-sm-6 hidden-xs">
+                <img src="imatges/pay_visa.png">
+                <img src="imatges/pay_paypal.png">
+                <img src="imatges/pay_mastercard.png">
+                <img src="imatges/pay_maestro.png">
+            </div>
         </div>
     </div>
 </footer>
