--- a/header.html
+++ b/header.html
@@ -1,71 +1,27 @@
-<header>
+<header id="header">
     <div class="container">
+        <a href="#">
         <div class="logotip">
-            <h1>FABRIC</h1>
-        </div>
-        <div class="links text-center">
-            <a href="#" class="actiu">HOME</a>
-            <a href="#">MEGAMENU<span class="caret"></span></a>
-            <a href="#">SHOP</a>
-            <a href="#">BLOG</a>
-            <a href="#">PORTFOLIO</a>
-            <a href="#">PAGES<span class="caret"></span></a>
-        </div>
-        <div class="icones">
-            <a href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
-            <a href="#"><i class="fa fa-user" aria-hidden="true"></i></a>
-            <a href="#"><i class="fa fa-shopping-basket" aria-hidden="true"></i></a>
-        </div>
+            <img src="imatges/needle.png">
+            <h1>FABRIC</h1> </div></a>
+        <div class="links text-center"> 
+            <a href="index.php" class="actiu">HOME</a> 
+            <a href="#">MEGAMENU <span class="caret"></span></a> 
+            <a href="cercador.php">SHOP</a> 
+            <a href="#">BLOG</a> 
+            <a href="cistell.php">PORTFOLIO</a>
+            <div class="btn-group">
+                <!--button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Action <span class="caret"></span> </button-->
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">PAGES <span class="caret"></span> </a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Action</a></li>
+                    <li><a href="#">Another action</a></li>
+                    <li><a href="#">Something else here</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li><a href="#">Separated link</a></li>
+                </ul>
+            </div>
+            <!--a href="#">PAGES<span class="caret"></span></a--></div>
+        <div class="icones"> <a href="#"><i class="fa fa-search" aria-hidden="true"></i></a> <a href="#"><i class="fa fa-user" aria-hidden="true"></i></a> <a href="#"><i class="fa fa-shopping-basket" aria-hidden="true"></i></a> </div>
     </div>
 </header>
-<header>
-        <nav class="navbar navbar-default navbar-static-top">
-            <div class="container">
-                <div class="navbar-header pull-left"> <a class="navbar-brand" href="#">Brand</a> </div>
-                <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header pull-right">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-                    <div class="navbar-header pull-right">
-                        <ul class="nav navbar-nav navbar-right">
-                            <li class="pull-right"><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
-                            <li class="pull-right"><a href="#"><i class="fa fa-user" aria-hidden="true"></i></a></li>
-                            <li class="pull-right"><a href="#"><i class="fa fa-shopping-basket" aria-hidden="true"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">HOME <span class="sr-only">(current)</span></a></li>
-                        <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">MEGAMENU <span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Action</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something else here</a></li>
-                                <li role="separator" class="divider"></li>
-                                <li><a href="#">Separated link</a></li>
-                                <li role="separator" class="divider"></li>
-                                <li><a href="#">One more separated link</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">SHOP</a></li>
-                        <li><a href="#">BLOG</a></li>
-                        <li><a href="#">PORTFOLIO</a></li>
-                        <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">PAGES <span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Action</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something else here</a></li>
-                                <li role="separator" class="divider"></li>
-                                <li><a href="#">Separated link</a></li>
-                                <li role="separator" class="divider"></li>
-                                <li><a href="#">One more separated link</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-                <!-- /.navbar-collapse -->
-            </div>
-            <!-- /.container-fluid -->
-        </nav>
-    </header>
