--- a/slider3.html
+++ b/slider3.html
@@ -31,26 +31,28 @@
                                     </div>
                                 </div>
                                 <div class="photo"> <img src="imatges/slider-arrivals/1.jpg" class="img-responsive" alt="a" />
-                                    <div class="hover-item"> <i class="fa fa-heart" aria-hidden="true"></i> <i class="fa fa-shopping-basket" aria-hidden="true">
+                                    <div class="hover-item"> 
+                                        <a href="#"><i class="fa fa-heart" aria-hidden="true"></i></a> <a href="#"><i class="fa fa-shopping-basket" aria-hidden="true">
                                         <div class="hover-carrito">
                                             <p>Add to cart</p>
                                             <div class="arrow-up">
                                             </div>
                                         </div>
-                                    </i> <i class="fa fa-retweet" aria-hidden="true"></i> </div>
+                                    </i></a> <a href="#"><i class="fa fa-retweet" aria-hidden="true"></i></a> </div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <div class="col-item">
                                 <div class="photo"> <img src="imatges/slider-arrivals/2.jpg" class="img-responsive" alt="a" />
-                                    <div class="hover-item"> <i class="fa fa-heart" aria-hidden="true"></i> <i class="fa fa-shopping-basket" aria-hidden="true">
+                                    <div class="hover-item"> 
+                                        <a href="#"><i class="fa fa-heart" aria-hidden="true"></i></a> <a href="#"><i class="fa fa-shopping-basket" aria-hidden="true">
                                         <div class="hover-carrito">
                                             <p>Add to cart</p>
                                             <div class="arrow-up">
                                             </div>
                                         </div>
-                                    </i> <i class="fa fa-retweet" aria-hidden="true"></i> </div>
+                                    </i></a> <a href="#"><i class="fa fa-retweet" aria-hidden="true"></i></a> </div>
                                 </div>
                                 <div class="standard standard-taronja text-center">
                                     <div>
@@ -71,13 +73,14 @@
                                     </div>
                                 </div>
                                 <div class="photo"> <img src="imatges/slider-arrivals/3.jpg" class="img-responsive" alt="a" />
-                                    <div class="hover-item"> <i class="fa fa-heart" aria-hidden="true"></i> <i class="fa fa-shopping-basket" aria-hidden="true">
+                                    <div class="hover-item"> 
+                                        <a href="#"><i class="fa fa-heart" aria-hidden="true"></i></a> <a href="#"><i class="fa fa-shopping-basket" aria-hidden="true">
                                         <div class="hover-carrito">
                                             <p>Add to cart</p>
                                             <div class="arrow-up">
                                             </div>
                                         </div>
-                                    </i> <i class="fa fa-retweet" aria-hidden="true"></i> </div>
+                                    </i></a> <a href="#"><i class="fa fa-retweet" aria-hidden="true"></i></a> </div>
                                 </div>
                             </div>
                         </div>
@@ -88,13 +91,14 @@
                         <div class="col-sm-4">
                             <div class="col-item">
                                 <div class="photo"> <img src="imatges/slider-arrivals/1.jpg" class="img-responsive" alt="a" />
-                                    <div class="hover-item"> <i class="fa fa-heart" aria-hidden="true"></i> <i class="fa fa-shopping-basket" aria-hidden="true">
+                                    <div class="hover-item"> 
+                                        <a href="#"><i class="fa fa-heart" aria-hidden="true"></i></a> <a href="#"><i class="fa fa-shopping-basket" aria-hidden="true">
                                         <div class="hover-carrito">
                                             <p>Add to cart</p>
                                             <div class="arrow-up">
                                             </div>
                                         </div>
-                                    </i> <i class="fa fa-retweet" aria-hidden="true"></i> </div>
+                                    </i></a> <a href="#"><i class="fa fa-retweet" aria-hidden="true"></i></a> </div>
                                 </div>
                                 <div class="standard standard-taronja text-center">
                                     <div>
@@ -115,26 +119,28 @@
                                     </div>
                                 </div>
                                 <div class="photo"> <img src="imatges/slider-arrivals/2.jpg" class="img-responsive" alt="a" />
-                                    <div class="hover-item"> <i class="fa fa-heart" aria-hidden="true"></i> <i class="fa fa-shopping-basket" aria-hidden="true">
+                                    <div class="hover-item"> 
+                                        <a href="#"><i class="fa fa-heart" aria-hidden="true"></i></a> <a href="#"><i class="fa fa-shopping-basket" aria-hidden="true">
                                         <div class="hover-carrito">
                                             <p>Add to cart</p>
                                             <div class="arrow-up">
                                             </div>
                                         </div>
-                                    </i> <i class="fa fa-retweet" aria-hidden="true"></i> </div>
+                                    </i></a> <a href="#"><i class="fa fa-retweet" aria-hidden="true"></i></a> </div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <div class="col-item">
                                 <div class="photo"> <img src="imatges/slider-arrivals/3.jpg" class="img-responsive" alt="a" />
-                                    <div class="hover-item"> <i class="fa fa-heart" aria-hidden="true"></i> <i class="fa fa-shopping-basket" aria-hidden="true">
+                                    <div class="hover-item"> 
+                                        <a href="#"><i class="fa fa-heart" aria-hidden="true"></i></a> <a href="#"><i class="fa fa-shopping-basket" aria-hidden="true">
                                         <div class="hover-carrito">
                                             <p>Add to cart</p>
                                             <div class="arrow-up">
                                             </div>
                                         </div>
-                                    </i> <i class="fa fa-retweet" aria-hidden="true"></i> </div>
+                                    </i></a> <a href="#"><i class="fa fa-retweet" aria-hidden="true"></i></a> </div>
                                 </div>
                                 <div class="standard standard-taronja text-center">
                                     <div>
@@ -160,13 +166,14 @@
                 </div>
             </div>
             <div class="photo"> <img src="imatges/slider-arrivals/1.jpg" class="img-responsive" alt="a" />
-                <div class="hover-item"> <i class="fa fa-heart" aria-hidden="true"></i> <i class="fa fa-shopping-basket" aria-hidden="true">
+                <div class="hover-item"> 
+                                        <a href="#"><i class="fa fa-heart" aria-hidden="true"></i></a> <a href="#"><i class="fa fa-shopping-basket" aria-hidden="true">
                                         <div class="hover-carrito">
                                             <p>Add to cart</p>
                                             <div class="arrow-up">
                                             </div>
                                         </div>
-                                    </i> <i class="fa fa-retweet" aria-hidden="true"></i> </div>
+                                    </i></a> <a href="#"><i class="fa fa-retweet" aria-hidden="true"></i></a> </div>
             </div>
         </div>
     </div>
