--- a/abans_footer.html
+++ b/abans_footer.html
@@ -1,4 +1,4 @@
-<div class="newsletter parallax-window" androidFix="false" data-parallax="scroll" data-image-src="imatges/parallax1.jpg">
+<div class="newsletter parallax-window" data-parallax="scroll" data-image-src="imatges/parallax3.jpg">
             <div class="container">
                 <div class="row">
                     <div class="text-blanc text-center">
