--- a/header.html
+++ b/header.html
@@ -80,16 +80,45 @@
         </div>
         <div id="carrito" class="collapse">
             <div class="item-carrito">
-                <img src="imatges/slider2/1.jpg">
-                <div>
+                <div class="imatge-carrito">
+                    <img src="imatges/slider2/1.jpg"></div>
+                <div class="nom-carrito">
                     <h4>Men's Black T...</h4>
                     <p>Color: Black<br>Size SL</p>
+                </div>
+                <div class="boto-carrito">
+                    <button class="btn">X</button>
+                </div>
+            </div>
+            <div class="item-carrito">
+                <div class="imatge-carrito">
+                    <img src="imatges/slider2/9.jpg"></div>
+                <div class="nom-carrito">
+                    <h4>Men's Black T...</h4>
+                    <p>Color: Black<br>Size SL</p>
+                </div>
+                <div class="boto-carrito">
+                    <button class="btn">X</button>
+                </div>
+            </div>
+            <div class="item-carrito">
+                <div class="imatge-carrito">
+                    <img src="imatges/slider2/5.jpg"></div>
+                <div class="nom-carrito">
+                    <h4>Men's Black T...</h4>
+                    <p>Color: Black<br>Size SL</p>
+                </div>
+                <div class="boto-carrito">
                     <button class="btn">X</button>
                 </div>
             </div>
             <hr>
-            <span>SUBTOTAL</span><span>$190.98</span>
-            <button class="boto-taronja">CHECKOUT</button>
+            <div class="preu-carrito text-center">
+                <div>
+                <p>SUBTOTAL</p><p>$190.98</p>
+                </div>
+                <button class="boto-taronja">CHECKOUT</button>
+            </div>
         </div>
         
         
