--- a/footer.html
+++ b/footer.html
@@ -23,7 +23,7 @@
                     <li><i class="fa-li fa fa-angle-double-right" aria-hidden="true"></i>Discount Off</li>
                 </ul>
             </div>
-            <div class="col-xs-10 col-sm-6 col-md-3 col-md-pull-9">
+            <div class="col-xs-10 col-sm-6 col-md-3 col-md-pull-9 contacte">
                 <div class="itemFooter">
                     <button type="button" class="btn btn-default"><i class="fa fa-home" aria-hidden="true"></i></button>
                     <p> 27, North circular road,
@@ -48,7 +48,7 @@
             <div class="col-sm-6">
                 <p>Copyright &copy;2016 All right reserved</p>
             </div>
-            <div class="col-sm-6 hidden-xs">
+            <div class="col-sm-6 hidden-xs text-center">
                 <img src="imatges/pay_visa.png">
                 <img src="imatges/pay_paypal.png">
                 <img src="imatges/pay_mastercard.png">
