--- a/header.html
+++ b/header.html
@@ -29,7 +29,7 @@
             <!--a href="#"><i class="fa fa-shopping-basket" aria-hidden="true"></i></a--> 
                 <!--button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Action <span class="caret"></span> </button-->
                 <!--a href="#carrito" data-toggle="collapse" aria-expanded="false" aria-controls="carrito"><i class="fa fa-shopping-basket" aria-hidden="true"></i></a-->
-                <a href="#carrito"  role="button" data-toggle="collapse" aria-expanded="false" aria-controls="carrito"><i class="fa fa-shopping-basket" aria-hidden="true"></i></a> 
+                <a href="#carrito"  role="button" data-toggle="collapse" aria-expanded="false" aria-controls="carrito"><i class="fa fa-shopping-basket" aria-hidden="true"></i><i class="num-carrito">2</i></a> 
             <button type="button" class="boto-header collapsed visible-sm-inline-block visible-xs-inline-block" data-toggle="collapse" data-target="#menu-header" aria-expanded="false">
                 <i class="fa fa-bars" aria-hidden="true"></i>
             </button>
