--- a/slider2.html
+++ b/slider2.html
@@ -192,7 +192,7 @@
     </div>
     <!-- ############### SLIDER TABLET ###################### -->
     <div class="row visible-sm">
-        <div class="col-md-12">
+        <div class="col-md-12 fletxa">
             <!-- Controls -->
             <div class="controls pull-right">
                 <a class="left fa fa-chevron-left boto-slider" href="#carousel-example2" data-slide="prev"></a>
