--- a/footer.html
+++ b/footer.html
@@ -2,8 +2,11 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6 col-md-3 col-md-push-9">
-                <h3 class="logotip">FABRIC</h3>
-                <p>His duobus, sicariorum. Et orci aetate erat, sed nescio quo modo se gerendo levir meus aufert a me.</p>
+                <a href="#">
+            <div class="logotip centrar-petit">
+                <img src="imatges/needle.png">
+                <h2>FABRIC</h2> </div></a>
+                <p class="centrar-petit">His duobus, sicariorum. Et orci aetate erat, sed nescio quo modo se gerendo levir meus aufert a me.</p>
             </div>
             <div class="col-sm-6 col-md-3">
                 <h4>ABOUT</h4>
